fix displaying two views

--- a/nglview/tests/notebooks/api/test_callbacks.ipynb
+++ b/nglview/tests/notebooks/api/test_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['setUnSyncCamera',\n",
+       " 'setSelector',\n",
+       " 'setUnSyncFrame',\n",
+       " 'setDelay',\n",
+       " 'loadFile',\n",
+       " 'clearRepresentations',\n",
+       " 'addRepresentation']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x._method_name for x in view2._xxx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -106,6 +134,46 @@
    "source": [
     "assert len(view2._repr_dict['c0']) == 1\n",
     "assert view2._repr_dict['c0']['0']['name'] == 'licorice'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['setUnSyncCamera',\n",
+       " 'setSelector',\n",
+       " 'setUnSyncFrame',\n",
+       " 'setDelay',\n",
+       " 'loadFile',\n",
+       " 'clearRepresentations',\n",
+       " 'addRepresentation']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x._method_name for x in view2._xxx]"
    ]
   }
  ],
@@ -130,114 +198,127 @@
   },
   "widgets": {
    "state": {
-    "1c35424b78e446c3a57da9d993aca1c8": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "3a3436c5ab61496f8b38c957424de22e": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "5468c18a4f5c4612bffd1825afc3b9f0": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "5578ee3c92494701af9071cedd60f6d2": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "57779e4ba32f4ebb8c16be41f6d0052c": {
+    "0406f286a8fc42fa97071a22d654009b": {
      "views": [
       {
        "cell_index": 6
-      }
-     ]
-    },
-    "6f1b56afcf5d43f7bdd080e55b65f972": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "7a204a9f62b147d3b4b6eb2c3afa3b24": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "8fb3641287564a86abdd3827e910f9d4": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "9950dedc24074f2089524dc7203a45da": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "a2c82153cb49469fbdc6191e9fde6ac7": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "a628c2d19fc148baa88a9b2caf937d4b": {
-     "views": [
-      {
-       "cell_index": 4
       },
       {
-       "cell_index": 7
+       "cell_index": 10
       },
       {
-       "cell_index": 7
+       "cell_index": 10
       }
      ]
     },
-    "af21aef0ea6b4443bdaa2587e45baa7e": {
+    "237e95f72d8d4177b05eac41f75b9b33": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 9
+      }
+     ]
+    },
+    "2ce1e5a7b0d54ff68ce672b4beeb0136": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 10
+      }
+     ]
+    },
+    "48ff17795bb544c6b96220f7e95d1ec8": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 9
+      },
+      {
+       "cell_index": 9
+      }
+     ]
+    },
+    "714646c32da6461babf607e5b9a5b7e2": {
      "views": [
       {
        "cell_index": 4
       }
      ]
     },
-    "b1f5842d9474446392abee65d2cae854": {
+    "862918f190144f278311bf508f8ef3d3": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 6
+      },
+      {
+       "cell_index": 10
       }
      ]
     },
-    "b745d95cad24413e98c2765b25eacd8b": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "f55f8c8a8b9045d3854ce4e77fa31d2f": {
+    "921bd720ff07437c908e30d4d9111792": {
      "views": [
       {
        "cell_index": 4
+      }
+     ]
+    },
+    "b444981768b848bbb46ab8aa52720d4a": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 9
+      }
+     ]
+    },
+    "ce25931cd0e44acb9a6b0d4ffdb246fc": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 9
+      }
+     ]
+    },
+    "d43e9b226e844713a953770dfc389ba2": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 9
+      }
+     ]
+    },
+    "d897db5d8ad444f6942fc6e9b31ea83d": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "dcbc0da1543543f793cdbe8c2b13e4c1": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
+    "f319ef7dbf7d42a4b672efab2be5692c": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 10
       }
      ]
     }
