--- a/nglview/tests/notebooks/api/test_callbacks.ipynb
+++ b/nglview/tests/notebooks/api/test_callbacks.ipynb
@@ -8,20 +8,38 @@
    },
    "outputs": [],
    "source": [
-    "import nglview as nv"
+    "import nglview as nv\n",
+    "from nglview.tests.utils import get_fn\n",
+    "\n",
+    "membrane_pdb = get_fn('rho.pdb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pytraj.Trajectory, 1 frames: \n",
+       "Size: 0.001162 (GB)\n",
+       "<Topology: 51983 atoms, 13295 residues, 12949 mols, PBC with box type = ortho>\n",
+       "           "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pytraj as pt\n",
     "\n",
-    "traj = pt.load('test0.pdb') "
+    "traj = pt.load(membrane_pdb)\n",
+    "traj"
    ]
   },
   {
@@ -33,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -51,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view = foo()\n",
-    "view"
+    "view1 = foo()\n",
+    "view1"
    ]
   },
   {
@@ -70,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -81,8 +99,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expected: Get the same representations as `view1`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -90,14 +115,47 @@
    "source": [
     "view2.add_trajectory(traj)\n",
     "view2.clear()\n",
-    "view2.add_licorice('protein')"
+    "view2.add_cartoon('protein', color='sstruc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import threading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mt = threading.main_thread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view2.thread.start?"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -111,53 +169,39 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   },
   "widgets": {
    "state": {
-    "135b17e3058d4630b0e900342f431b0c": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "3ebe520e781b42129ec642b24894ddb7": {
+    "443a9a121318408da043e6210b04d4d3": {
      "views": [
       {
        "cell_index": 4
       }
      ]
     },
-    "4a0c687b60e84524b4268c935b5bc3f2": {
+    "672e5d3075144f7a85dd8e939cb50709": {
      "views": [
       {
        "cell_index": 6
       }
      ]
     },
-    "803993561a8e4223bc43624afcef059b": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "90b1a1550c1c4b809ebdc0689cf9d294": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "b1db4bb686ca4570921fdb1d3a243fbe": {
+    "6f8a120eb4314e7687d8559be6d5b08f": {
      "views": [
       {
        "cell_index": 6
       }
      ]
     },
-    "cc1b373eee1b4317a40b5334b3b53cd8": {
+    "cb1c2a50214d4a1e85d1e682cacafdd1": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
+    "fc38309dce3c404caa1e7ff874ed2bdf": {
      "views": [
       {
        "cell_index": 4
