--- a/nglview/tests/notebooks/api/test_callbacks.ipynb
+++ b/nglview/tests/notebooks/api/test_callbacks.ipynb
@@ -155,7 +155,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -169,47 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
-  },
-  "widgets": {
-   "state": {
-    "443a9a121318408da043e6210b04d4d3": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    },
-    "672e5d3075144f7a85dd8e939cb50709": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "6f8a120eb4314e7687d8559be6d5b08f": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "cb1c2a50214d4a1e85d1e682cacafdd1": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "fc38309dce3c404caa1e7ff874ed2bdf": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
