--- a/nglview/tests/notebooks/api/test_callbacks.ipynb
+++ b/nglview/tests/notebooks/api/test_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "           "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -117,39 +117,6 @@
     "view2.clear()\n",
     "view2.add_cartoon('protein', color='sstruc')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import threading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mt = threading.main_thread()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view2.thread.start?"
-   ]
   }
  ],
  "metadata": {
@@ -170,6 +137,53 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "0781a53b2be346a4b9a78dbd48c0d5cd": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
+    "25995215d9674c01b838d378cc0a2be1": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "94c3baba31ab4d55ab265e20765179e4": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "9b470fd8ee8047449f35608280000751": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "a44e26a2a9fd4a76b10fcb4625e70f0c": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
+    "a6588b6aee07486782d90ac4cd2d7aa6": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
