--- a/nglview/tests/notebooks/api/test_callbacks.ipynb
+++ b/nglview/tests/notebooks/api/test_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "           "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -116,6 +116,24 @@
     "view2.add_trajectory(traj)\n",
     "view2.clear()\n",
     "view2.add_cartoon('protein', color='sstruc')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expected: Get the same representations if display again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view2"
    ]
   }
  ],
@@ -140,45 +158,77 @@
   },
   "widgets": {
    "state": {
-    "0781a53b2be346a4b9a78dbd48c0d5cd": {
-     "views": [
-      {
-       "cell_index": 6
-      }
-     ]
-    },
-    "25995215d9674c01b838d378cc0a2be1": {
+    "5c4a202a8dad4e7a98cb1cd7df731587": {
      "views": [
       {
        "cell_index": 4
       }
      ]
     },
-    "94c3baba31ab4d55ab265e20765179e4": {
+    "7ce8a15e5724420a8273cf0464e80232": {
      "views": [
       {
        "cell_index": 4
       }
      ]
     },
-    "9b470fd8ee8047449f35608280000751": {
+    "816d15c85aae4378b60ddd9698eee00d": {
      "views": [
       {
        "cell_index": 4
       }
      ]
     },
-    "a44e26a2a9fd4a76b10fcb4625e70f0c": {
+    "aba06903ea8e4cc1abc8d203518af28f": {
      "views": [
       {
        "cell_index": 6
+      },
+      {
+       "cell_index": 10
       }
      ]
     },
-    "a6588b6aee07486782d90ac4cd2d7aa6": {
+    "b577b3104129499095fdc32b83499fb5": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "b7c1189be3a74736b733657d74d66c46": {
      "views": [
       {
        "cell_index": 6
+      },
+      {
+       "cell_index": 10
+      }
+     ]
+    },
+    "e0740271edc34d7faf8071fcfbe9e0b2": {
+     "views": [
+      {
+       "cell_index": 6
+      },
+      {
+       "cell_index": 11
+      },
+      {
+       "cell_index": 11
+      },
+      {
+       "cell_index": 10
+      }
+     ]
+    },
+    "eafbc0c28f82436d9c2a12da034d6884": {
+     "views": [
+      {
+       "cell_index": 4
+      },
+      {
+       "cell_index": 11
       }
      ]
     }
