--- a/nglview/tests/notebooks/test_viewerControls.ipynb
+++ b/nglview/tests/notebooks/test_viewerControls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -26,25 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "args = [[\n",
-    "5.16,  -0.86, -8.11, 0,\n",
-    "3.05,   9.11,  0.97, 0,\n",
-    "7.56,  -3.08,  5.15, 0,\n",
-    "-28.57, -13.64,  3.36, 1\n",
-    "]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -52,7 +34,18 @@
    },
    "outputs": [],
    "source": [
-    "view._remote_call('orient', target='viewerControls', args=args)"
+    "view._remote_call('zoom', target='viewerControls', args=[0.1,])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.center('*')"
    ]
   }
  ],
