--- a/nglview/tests/notebooks/api/test_set_represetation_via_gui.ipynb
+++ b/nglview/tests/notebooks/api/test_set_represetation_via_gui.ipynb
@@ -80,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert widget_repr.children[0].value == 1.0"
@@ -144,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert c0 != c1"
@@ -191,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
