snakify + add cat example

--- a/nglview/tests/notebooks/api/test_add_shape.ipynb
+++ b/nglview/tests/notebooks/api/test_add_shape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c535970e6e6d4b6a92e6cfbbe00fd618",
+       "model_id": "85752a108ae24abfad9fd9f09cbeb5de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c535970e6e6d4b6a92e6cfbbe00fd618",
+       "model_id": "85752a108ae24abfad9fd9f09cbeb5de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,6 +58,51 @@
    "source": [
     "# Make sure we can display view again.\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b4c52c81e92245ceb800d17301795659",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import nglview as nv\n",
+    "view2 = nv.NGLWidget()\n",
+    "shape = view2.shape\n",
+    "grey = [ 0.8, 0.8, 0.8 ]\n",
+    "darkgrey = [ 0.6, 0.6, 0.6 ]\n",
+    "\n",
+    "shape.add_ellipsoid([ 0, 0, 0 ], grey, 4, [ 0, 3, 0 ], [ 0, 0, 1 ], \"face\")\n",
+    "shape.add_sphere([ -2, 1, -1 ], darkgrey, 0.3, \"right eye\")\n",
+    "shape.add_sphere([ 2, 1, -1 ], darkgrey, 0.3, \"left eye\")\n",
+    "shape.add_sphere([ 0, 0, -1 ], darkgrey, 0.5, \"nose\")\n",
+    "shape.add_ellipsoid([ -1, -1, -1 ], darkgrey, 1.3, [ 0, 1, 0 ], [ 0, 0, 0.3 ], \"right cheek\")\n",
+    "shape.add_ellipsoid([ 1, -1, -1 ], darkgrey, 1.3, [ 0, 1, 0 ], [ 0, 0, 0.3 ], \"left cheek\")\n",
+    "shape.add_cone([ 2.5, 1.7, 0 ], [ 4, 3, 0 ], darkgrey, 0.8, \"left ear\")\n",
+    "shape.add_cone([ -2.5, 1.7, 0 ], [ -4, 3, 0 ], darkgrey, 0.8, \"right ear\")\n",
+    "shape.add_cylinder([ -1, -1, -1 ], [ -4.3, -0.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_cylinder([ -1, -1, -1 ], [ -4.5, -1.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_cylinder([ -1, -1, -1 ], [ -4.2, -2.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_cylinder([ 1, -1, -1 ], [ 4.3, -0.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_cylinder([ 1, -1, -1 ], [ 4.5, -1.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_cylinder([ 1, -1, -1 ], [ 4.2, -2.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
+    "shape.add_label([ 0, 4, -1 ], [ 0.2, 0.5, 0.8 ], 2.5, \"meow\")\n",
+    "view2"
    ]
   }
  ],
