--- a/nglview/tests/notebooks/api/test_representations.ipynb
+++ b/nglview/tests/notebooks/api/test_representations.ipynb
@@ -20,13 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kwargs {'center': False}\n",
+      "{'defaultRepresentation': True}\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffd08202af4e43b3ba8b6d3e0cbc4dcf",
+       "model_id": "e29a58a1d7964ec8b568fada6686bfd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,21 +49,30 @@
    "source": [
     "struct = nv.FileStructure(nv.datafiles.ALA3)\n",
     "representations = [\n",
-    "    {\"type\": \"licorice\", \"params\": {\n",
+    "    {\"type\": \"line\", \"params\": {\n",
     "        \"sele\": \"*\"\n",
     "    }}\n",
     "]\n",
-    "view = nv.NGLWidget(struct, representations=representations, default_representation=False)\n",
+    "view = nv.NGLWidget(struct, representations=representations, center=False)\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert view._ngl_repr_dict['0']['0']['type'] == 'licorice'"
+    "view??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert view._ngl_repr_dict['0']['0']['type'] == 'line'"
    ]
   },
   {
