Support theme 'dark'

--- a/nglview/tests/notebooks/api/test_embed.ipynb
+++ b/nglview/tests/notebooks/api/test_embed.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9487d10d15214f7cbc0d074f20c4531f",
+       "model_id": "dc418b9fae0a426ebf5183994d412e78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,62 @@
     "\n",
     "# repr\n",
     "assert state['_ngl_repr_dict']['0']['0']['type'] == 'licorice'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view._gui_theme = 'dark'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = view._get_embed_state()['state']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "msg = state['_ngl_msg_archive']\n",
+    "assert msg[-1]['methodName'] == 'updateNGLTheme'\n",
+    "assert 'color: #B8B8B8' in msg[-1]['args'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert msg[-1]['fire_embed'] == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nv.write_html(\"index.html\", view)"
    ]
   }
  ],
