FIX display view via GridBox

--- a/nglview/tests/notebooks/api/test_add_shape.ipynb
+++ b/nglview/tests/notebooks/api/test_add_shape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -10,12 +10,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85752a108ae24abfad9fd9f09cbeb5de",
+       "model_id": "d146880326a84bfea403085dbd6e12c8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget()"
       ]
      },
      "metadata": {},
@@ -35,7 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i0 = view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -43,12 +52,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85752a108ae24abfad9fd9f09cbeb5de",
+       "model_id": "d146880326a84bfea403085dbd6e12c8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget(n_components=3)"
       ]
      },
      "metadata": {},
@@ -62,18 +71,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i1 = view.render_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert i0.value == i1.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4c52c81e92245ceb800d17301795659",
+       "model_id": "ea855b30b4104300a365f377967812ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget()"
       ]
      },
      "metadata": {},
@@ -102,6 +129,22 @@
     "shape.add_cylinder([ 1, -1, -1 ], [ 4.5, -1.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
     "shape.add_cylinder([ 1, -1, -1 ], [ 4.2, -2.2, -1.2 ], darkgrey, 0.1, \"whisker\")\n",
     "shape.add_label([ 0, 4, -1 ], [ 0.2, 0.5, 0.8 ], 2.5, \"meow\")\n",
+    "view2.control.orient([12.353482162080093,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 12.353482162080093,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 12.353482162080093,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 1])\n",
     "view2"
    ]
   }
@@ -122,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
