--- a/nglview/tests/notebooks/api/test_sync_view.ipynb
+++ b/nglview/tests/notebooks/api/test_sync_view.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2b62da934b943419f7a722bd904b2c0",
+       "model_id": "38cd69c35a3c4b41b564130d51473647",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "NGLWidget()"
+       "NGLWidget(gui_style='ngl')"
       ]
      },
      "metadata": {},
@@ -22,27 +22,197 @@
    ],
    "source": [
     "import nglview as nv\n",
+    "from ipywidgets import GridBox\n",
     "\n",
     "v0 = nv.demo()\n",
-    "v1 = nv.demo()\n",
-    "v0._set_sync_camera([v0, v1])\n",
+    "v0.gui_style = 'ngl'\n",
+    "v0.clear()\n",
+    "v0.add_rope()\n",
+    "v0.control.orient([53.19305068507504,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 53.19305068507504,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 0,\n",
+    " 53.19305068507504,\n",
+    " 0,\n",
+    " -37.284461975097656,\n",
+    " -42.47041130065918,\n",
+    " -44.55349826812744,\n",
+    " 1])\n",
     "v0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v0.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a18a324c962f4d13aac0038acae75896",
+       "model_id": "38cd69c35a3c4b41b564130d51473647",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "NGLWidget()"
+       "NGLWidget(gui_style='ngl', n_components=1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v0.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98b65e167fc5477493e857db116470f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(NGLWidget(gui_style='ngl', n_components=1), NGLWidget(gui_style='ngl', n_components=1)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = GridBox([v0, v0])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v0.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display GridBox first then view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83f086d38d244928a7bf1aeda4b2cf73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(NGLWidget(background='black'), NGLWidget(background='black')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v1 = nv.demo()\n",
+    "v1.background = 'black'\n",
+    "b = GridBox([v1, v1])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v1.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83f086d38d244928a7bf1aeda4b2cf73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(NGLWidget(background='black', n_components=1), NGLWidget(background='black', n_components=1)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v1.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75ceef3266a743a9b347f21d98e78d24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(background='black', n_components=1)"
       ]
      },
      "metadata": {},
@@ -55,18 +225,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v1.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make empty view first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2b62da934b943419f7a722bd904b2c0",
+       "model_id": "73151b10712f415e8a9876cba3ed0aba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "NGLWidget(n_components=1)"
+       "NGLWidget()"
       ]
      },
      "metadata": {},
@@ -74,16 +260,52 @@
     }
    ],
    "source": [
-    "v0"
+    "v2 = nv.NGLWidget()\n",
+    "v2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME: add assertion"
+    "assert v2.n_components == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "84a9fa3a13074ee7adbee604499a3f91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(NGLWidget(), NGLWidget(background='black', n_components=1)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = GridBox([v2, v1])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v2.n_components == 0\n",
+    "assert v1.n_components == 1"
    ]
   }
  ],
