--- a/nglview/tests/notebooks/api/test_component_names.ipynb
+++ b/nglview/tests/notebooks/api/test_component_names.ipynb
@@ -8,12 +8,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90579c7062ad4a4daf4de6897e21ca09",
+       "model_id": "2be3f5a6ba0d42969ad92817e80b573f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "NGLWidget()"
       ]
      },
      "metadata": {},
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<nglview.component.ComponentViewer at 0x106fd2c50>"
+       "<nglview.component.ComponentViewer at 0x7f8bd06f6978>"
       ]
      },
      "execution_count": 2,
@@ -64,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert view.n_components == 1"
@@ -75,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "view.remove_component(view.trajectory_0.id)"
@@ -86,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert not view._ngl_component_names"
@@ -111,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
