add _trim_messages to handle removing/adding components in embeding

--- a/nglview/tests/notebooks/api/test_sync_view.ipynb
+++ b/nglview/tests/notebooks/api/test_sync_view.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38cd69c35a3c4b41b564130d51473647",
+       "model_id": "e4b1f06feab440118d474644db6f194d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38cd69c35a3c4b41b564130d51473647",
+       "model_id": "e4b1f06feab440118d474644db6f194d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98b65e167fc5477493e857db116470f6",
+       "model_id": "4f284095320e423d997a311376842d7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83f086d38d244928a7bf1aeda4b2cf73",
+       "model_id": "4ad499cbfb944bb4b74646b7c0810ff2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83f086d38d244928a7bf1aeda4b2cf73",
+       "model_id": "4ad499cbfb944bb4b74646b7c0810ff2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75ceef3266a743a9b347f21d98e78d24",
+       "model_id": "1f1e6d870b1f471fb74f560352527ae8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73151b10712f415e8a9876cba3ed0aba",
+       "model_id": "5cb3292e8d4e45b9a95d2d0545435c3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84a9fa3a13074ee7adbee604499a3f91",
+       "model_id": "f95f4a264e024b928f09a8dd6f433f36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,6 +305,58 @@
    "outputs": [],
    "source": [
     "assert v2.n_components == 0\n",
+    "assert v1.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = v1.add_component(nv.datafiles.ALA3)\n",
+    "v1.remove_component(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert v1.n_components == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f1e6d870b1f471fb74f560352527ae8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(background='black', n_components=1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "assert v1.n_components == 1"
    ]
   }
