--- a/nglview/tests/notebooks/api/test_app_layout.ipynb
+++ b/nglview/tests/notebooks/api/test_app_layout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "\n",
     "v0 = nv.demo()\n",
     "v1 = nv.demo()\n",
+    "v2 = nv.demo()\n",
+    "v3 = nv.demo()\n",
     "p1 = v1.player._make_repr_playground()\n",
     "p0 = v0.player._make_repr_playground()\n",
     "pb0 = GridBoxNGL(p0.children)\n",
@@ -22,7 +24,7 @@
     "pb1.layout.width = '50%'\n",
     "repr_grid = GridBoxNGL(p0.children)\n",
     "repr_grid.layout.grid_template_columns = '150px 150px'\n",
-    "b = GridBoxNGL([v0, v1],\n",
+    "b = GridBoxNGL([v0, v1, v2, v3],\n",
     "               layout=Layout(grid_template_columns='50% 50%'))\n",
     "v0.player._create_all_widgets()\n",
     "header = Dropdown(options=['a', 'b'], value='a')\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -44,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b431dd723be64f7891de5a8a6add2ee5",
+       "model_id": "cc5efe94f7554ae484eb1bbebaeb19e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,21 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "b2._js(\"this.el.style.background = 'white'\")\n",
-    "repr_grid.layout.grid_template_columns = '150px 150px'\n",
-    "repr_grid.layout.grid_gap = '0px 0px'\n",
-    "repr_grid.align_self = 'start'\n",
-    "for kid in repr_grid.children:\n",
-    "    kid.layout.border = 'green solid 1px'"
+    "for pb in [pb0, pb1]:\n",
+    "    for kid in pb.children:\n",
+    "        kid.layout.border = 'green solid 1px'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
